2007-08-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/StatusProgressMonitor.cs: Properly update the status
	  bar when multiple status progress monitors are running at the same time.
	  Fixes bug #82251.

2007-08-16  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/CombineNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.addin.xml: Implemented Wish 82213: New command for
	  context menu: Open containing folder.
	
	  Added open in terminal option too (for folders). 

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/Document.cs,
	  MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Implemented Reload command
	  in Document.
	* MonoDevelop.Ide.Gui/Workbench.cs: Added helper method for getting a
	  document from a file name. The documents collection must be read-only in
	  the client api.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml, MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Codons/FileFilterCodon.cs: Moved FileFilterCodon from
	  MD.Projects to MD.Ide (where the extension point is actually defined).

2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82253.
	* MonoDevelop.Ide.Gui/Workbench.cs (DeleteLayout): Invoke event handlers
	for LayoutChanged.
	* gtk-gui/gui.stetic: Set ResponseId to OK for New button of NewLayoutDialog.
	* gtk-gui/*: Update.

2007-08-14  Ankit Jain  <jankit@novell.com>

	Fix bug #82280.
	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs: Add context menu with
	Open, Copy and SelectAll commands.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.OptionPanels/KeyBindingsPanel.cs,
	  options/KeyBindingSchemeEmacs.xml,